--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "dependencies": {
-    "@material/web": "^1.0.0-pre.5",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "rollup": "^3.20.2"
+    "material-components-web": "^14.0.0"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.2",
+    "webpack": "^5.77.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
   }
 }
